--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 /venv
 /local
 predictive_maint/predictive_maint/settings.py
+predictive_maint/predictive_maint/settings_copy.py
 predictive_maint/static/
+predictive_maint/media/
