--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ predictive_maint/predictive_maint/settings.py
 predictive_maint/predictive_maint/settings_copy.py
 predictive_maint/static/
 predictive_maint/media/
+.DS_Store
