--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
 asgiref==3.5.2
+astroid==2.11.6
 autopep8==1.6.0
 click==8.1.3
-colorama==0.4.5
+colorama==0.4.4
 crispy-bootstrap5==0.6
+dill==0.3.5.1
 Django==4.0.5
 django-crispy-forms==1.14.0
+django-extra-views==0.14.0
 djlint==1.3.0
-et-xmlfile==1.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 importlib-metadata==4.12.0
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 mysql==0.0.3
 mysqlclient==2.1.0
-numpy==1.22.0
-openpyxl==3.0.10
+numpy==1.22.4
 pandas==1.4.2
 pathspec==0.9.0
 Pillow==9.2.0
+platformdirs==2.5.2
 pycodestyle==2.8.0
+pylint==2.14.2
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
@@ -26,5 +32,9 @@ six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.0
 tqdm==4.64.0
+typing_extensions==4.2.0
+tzdata==2022.1
+wrapt==1.14.1
 zipp==3.8.0
