--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,15 @@ Django==4.0.5
 django-crispy-forms==1.14.0
 django-extra-views==0.14.0
 djlint==1.3.0
+gunicorn==20.1.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 importlib-metadata==4.12.0
 isort==5.10.1
+Jinja2==3.1.2
 lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
-mysql==0.0.3
-mysqlclient==2.1.0
 numpy==1.22.4
 pandas==1.4.2
 pathspec==0.9.0
@@ -34,7 +35,7 @@ toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.0
 tqdm==4.64.0
-typing_extensions==4.2.0
+typing-extensions==4.2.0
 tzdata==2022.1
 wrapt==1.14.1
 zipp==3.8.0
