--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.vscode
 /venv
 /local
+**/__pycache__/
 predictive_maint/predictive_maint/settings.py
 predictive_maint/predictive_maint/settings_copy.py
 predictive_maint/static/
